Particle System Bug on Cycles Render #39319

Closed
opened 2014-03-21 12:00:31 +01:00 by oginundercover · 13 comments
oginundercover commented 2014-03-21 12:00:31 +01:00 (Migrated from localhost:3001)

System Information
OS: Windows 8
CPU: Intel Core i5-4200U
GPU: NVidia GeForce GT720M 2 GB
RAM: 4 GB

Blender Version
Broken: (2.70)
Worked: (optional)

Sometimes Blender going crashed and closed suddenly when I set particle system, turning on the modifier stack then rendering it (also in preview mode)

**System Information** OS: Windows 8 CPU: Intel Core i5-4200U GPU: NVidia GeForce GT720M 2 GB RAM: 4 GB **Blender Version** Broken: (2.70) Worked: (optional) Sometimes Blender going crashed and closed suddenly when I set particle system, turning on the modifier stack then rendering it (also in preview mode)
oginundercover commented 2014-03-21 12:00:31 +01:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
oginundercover commented 2014-03-21 12:00:31 +01:00 (Migrated from localhost:3001)
Author

Added subscriber: @oginundercover

Added subscriber: @oginundercover

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

We need an example blend file.

We need an example blend file.
oginundercover commented 2014-03-21 12:51:41 +01:00 (Migrated from localhost:3001)
Author

I'm in a testing of particle system in Internal Render. I can't render combed hair in it. So, I check it if the problem persists in Cycles Render, then seeing another bug. it is fine in 2.69.

However, this is not happen if I have less vertex. Don't know why. I'm planning to roll back to 2.69.

thanks.

I'll file another bug report to the problem in Internal Renderer. I'm still inspecting this.

sampling.blend

I'm in a testing of particle system in Internal Render. I can't render combed hair in it. So, I check it if the problem persists in Cycles Render, then seeing another bug. it is fine in 2.69. However, this is not happen if I have less vertex. Don't know why. I'm planning to roll back to 2.69. thanks. I'll file another bug report to the problem in Internal Renderer. I'm still inspecting this. [sampling.blend](https://archive.blender.org/developer/F82078/sampling.blend)
oginundercover commented 2014-03-21 13:14:34 +01:00 (Migrated from localhost:3001)
Author

I've tried on 2.69 and I can confirm this is work, with the same high level of vertex. Thanks.

I've tried on 2.69 and I can confirm this is work, with the same high level of vertex. Thanks.

Added subscriber: @jemian

Added subscriber: @jemian

Maybe i have the same problem with hair in cycle
Rendering use 100% of ram memory (16Go) and freeze blender

Maybe i have the same problem with hair in cycle Rendering use 100% of ram memory (16Go) and freeze blender

Confirmed, the attached blend file crashes when pressing F12.

Confirmed, the attached blend file crashes when pressing F12.
Author

This issue was referenced by blender/blender-addons-contrib@a7ed1db51f

This issue was referenced by blender/blender-addons-contrib@a7ed1db51fa32a80b943816d354b45b413d98fa3
Author

This issue was referenced by a7ed1db51f

This issue was referenced by a7ed1db51fa32a80b943816d354b45b413d98fa3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit a7ed1db51f.

Closed by commit a7ed1db51f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39319
No description provided.